--- a/Lab2/lib/.project
+++ b/Lab2/lib/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Lab2-lib</name>
+	<name>lib</name>
 	<comment>Project Lab2-lib created by Buildship.</comment>
 	<projects>
 	</projects>
